# ogl

./: .gitignore  CMakeLists.txt  README.md  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
glprojects/coordinateSystem/: coordinatesystem.cpp  coordinatesystem.hpp
glprojects/dummy/: dummy.cpp  dummy.hpp
glprojects/quad3d/: quad3d.cpp  quad3d.hpp
glprojects/triangle2d/: triangle2d.cpp  triangle2d.hpp
src/: clock.hpp  filesys.hpp  glmprinter.cpp  glmprinter.hpp  glr.hpp  glwindow.cpp  glwindow.h  glwman.cpp  glwman.h  main.cpp  objimporter.hpp  ogl.cpp  ogl.h  verbose.cpp
